--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,11 +12,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up docker
-        uses: docker-practice/actions-setup-docker@master
-      - name: Run postgres
-        run: |
-          docker run -d -p 5432:5432 -e POSTGRES_HOST_AUTH_METHOD=trust --name db-test postgres:15-alpine
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -27,7 +22,7 @@ jobs:
           pip install -r requirements.txt -r requirements.dev.txt
       - name: Build coverage file
         run: |
-          DB_DSN=postgresql://postgres@localhost:5432/postgres pytest --showlocals --cache-clear --cov=auth_backend tests > pytest-coverage.txt
+          pytest --showlocals --cache-clear --cov=auth_backend tests > pytest-coverage.txt
       - name: Print report
         if: always()
         run: |
