--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -22,13 +22,25 @@ jobs:
           pip install -r requirements.txt -r requirements.dev.txt
       - name: Build coverage file
         run: |
-          pytest --showlocals --cache-clear --cov=app tests > pytest-coverage.txt
+          DB_DSN=postgresql://postgres@localhost:5432/postgres pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
       - name: Print report
         if: always()
         run: |
           cat pytest-coverage.txt
-      - name: Comment coverage
-        uses: coroo/pytest-coverage-commentator@v1.0.2
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          title: Coverage Report
+          badge-title: Code Coverage
+          hide-badge: false
+          hide-report: false
+          create-new-comment: false
+          hide-comment: false
+          report-only-changed-files: false
+          remove-link-from-badge: false
+          junitxml-path: ./pytest.xml
+          junitxml-title: Summary
   linting:
     runs-on: ubuntu-latest
     steps:
